--- a/projects/Pong/index.css
+++ b/projects/Pong/index.css
@@ -16,7 +16,7 @@ body {
     width: 30px;
     height: 200px;
     position: absolute;
-    top: 300px;  */  /* Uncomment if you want to set a "starting" position */
+    top: 300px;    /* Uncomment if you want to set a "starting" position */
   }
 
   #paddleR {
