--- a/projects/Pong/index.css
+++ b/projects/Pong/index.css
@@ -6,7 +6,7 @@ body {
   #board {
     width: 1200px;
     height: 600px;
-    border: 1px solid white;
+    border: 10px solid white;
     background-color: black;
     position: relative;
     margin: auto;
@@ -18,6 +18,7 @@ body {
     width: 30px;
     height: 200px;
     position: absolute;
+    border-radius: 15px;
     top: 200px;    /* Uncomment if you want to set a "starting" position */
   }
 
@@ -35,19 +36,40 @@ body {
 
     font-size: 80px;
     font-family: sans-serif;
-    color: rgb(94, 94, 94);
-    left: 70px;
-    top: 0px;
+    color: rgb(126, 126, 126);
+    left: 50px;
+    top: 30px;
     position: absolute;
+    font-style: bold;
   }
 
-  p {
+  .score {
 
     color: white;
     font-family: sans-serif;
     font-size: 20px;
-    padding: 0px;
-    top: 160px;
+    margin: auto;
+    top: 180px;
     position: absolute;
-    left: 400px
+  }
+
+  #score1 {
+
+    left: 400px;
+  }
+
+  #score2 {
+
+    left: 1400px;
+  }
+
+  #ball {
+
+    height: 30px;
+    width: 30px;
+    background-color: white;
+    top: 270px;
+    left:570px;
+    position: relative;
+    border-radius: 50%;
   }
