--- a/projects/Pong/index.css
+++ b/projects/Pong/index.css
@@ -39,17 +39,17 @@ body {
     font-size: 80px;
     font-family: sans-serif;
     color: rgb(126, 126, 126);
-    left: 50px;
-    top: 30px;
+    left: 370px;
+    top: 60px;
     position: absolute;
     font-style: bold;
   }
 
   .score {
 
-    color: white;
+    color: rgb(179, 179, 179);
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 200px;
     margin: auto;
     top: 180px;
     position: absolute;
@@ -57,12 +57,12 @@ body {
 
   #score1 {
 
-    left: 400px;
+    left: 45px;
   }
 
   #score2 {
 
-    left: 1400px;
+    left: 1045px;
   }
 
   #ball {
@@ -70,6 +70,17 @@ body {
     height: 30px;
     width: 30px;
     background-color: white;
+    top: 270px;
+    left:570px;
+    position: relative;
+    border-radius: 50%;
+  }
+
+  #ball2 {
+
+    height: 40px;
+    width: 40px;
+    background-color: rgb(255, 255, 255);
     top: 270px;
     left:570px;
     position: relative;
