--- a/projects/Pong/index.css
+++ b/projects/Pong/index.css
@@ -38,7 +38,7 @@ body {
 
     font-size: 80px;
     font-family: sans-serif;
-    color: rgb(126, 126, 126);
+    color: rgb(120, 120, 120);
     left: 370px;
     top: 60px;
     position: absolute;
@@ -47,7 +47,7 @@ body {
 
   .score {
 
-    color: rgb(179, 179, 179);
+    color: rgb(170, 170, 170);
     font-family: sans-serif;
     font-size: 200px;
     margin: auto;
@@ -65,24 +65,22 @@ body {
     left: 1045px;
   }
 
-  #ball {
+  .ball {
 
     height: 30px;
     width: 30px;
-    background-color: white;
     top: 270px;
     left:570px;
     position: relative;
     border-radius: 50%;
   }
 
+  #ball1 {
+
+    background-color: rgb(255, 255, 255);
+  }
+
   #ball2 {
 
-    height: 40px;
-    width: 40px;
-    background-color: rgb(255, 255, 255);
-    top: 270px;
-    left:570px;
-    position: relative;
-    border-radius: 50%;
+    background-color: rgb(180, 180, 180);
   }
