--- a/projects/snake/index.css
+++ b/projects/snake/index.css
@@ -1,21 +1,42 @@
 
 body {
-  background-color: darkgreen;
+  background-color: rgb(0, 0, 0);
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 60px;
+  font-family: Helvetica, sans-serif;
+  margin: 0px;
 }
 
 #board {
-  width: 440px;
-  height: 440px;
-  border: 1px solid white;
+  width: 880px;
+  height: 880px;
+  border: 4px solid white;
   background-color: black;
   position: relative;
+  margin: auto;
 }
 
-#gameItem {
-  background-color: teal;
-  width: 50px;
-  height: 50px;
+.head {
+  background-color: royalblue;
+}
+
+.body {
+  background-color: lightskyblue;
+}
+
+#snake {
+  width: 40px;
+  height: 40px;
   position: absolute;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+}
+
+#apple {
+  background-color: red;
+  width: 30px;
+  height: 30px;
+  position: absolute;
 }
