--- a/projects/snake/index.css
+++ b/projects/snake/index.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .snake {
-  background-color: lightskyblue;
+  background-color: rgb(21, 211, 116);
   width: 40px;
   height: 40px;
   position: absolute;
