--- a/projects/snake/index.css
+++ b/projects/snake/index.css
@@ -3,7 +3,7 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
-h1 {
+#title {
   color: white;
   text-align: center;
   font-size: 60px;
@@ -15,7 +15,7 @@ h1 {
   width: 880px;
   height: 880px;
   border: 4px solid white;
-  background-color: black;
+  background-color: rgb(220, 20, 20);
   position: relative;
   margin: auto;
 }
@@ -28,9 +28,18 @@ h1 {
 }
 
 .apple {
-  background-color: red;
+  background-color: rgb(255, 77, 77);
   width: 30px;
   height: 30px;
   position: absolute;
   border-radius: 8px;
+}
+
+#loseMessage {
+
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 30px;
+  font-family: Helvetica, sans-serif;
+  padding-top: 700px;
 }
