--- a/projects/space-invaders/styles.css
+++ b/projects/space-invaders/styles.css
@@ -13,3 +13,14 @@
     width: 20px;
     height: 20px;
 }
+
+.invader {
+
+    background-color: purple;
+    border-radius: 10px;
+}
+
+.shooter {
+
+    background-color: red;
+}
