--- a/projects/space-invaders/styles.css
+++ b/projects/space-invaders/styles.css
@@ -22,10 +22,15 @@
 
 .shooter {
 
-    background-color: red;
+    background-color: green;
 }
 
 .laser {
 
     background-color: orange;
+}
+
+.boom {
+
+    background-color: red;
 }
